--- a/style.css
+++ b/style.css
@@ -1,2 +1,13 @@
 html {box-sizing: border-box;}
 *, *:before, *:after {box-sizing: inherit;}
+
+body {
+	margin: 0;
+
+}
+
+#container {
+	width: 1000px;
+	height: 100%;
+	border: solid 1px blue;
+}
